--- a/WebApp/Views/Shared/pv_NavbarUsuario.cshtml
+++ b/WebApp/Views/Shared/pv_NavbarUsuario.cshtml
@@ -10,7 +10,7 @@
                     <input id="autocomplete-input" class="autocomplete white-text">
                 </div>
             </li>
-            <li class="m1 l1 right"><a href="#" id="btnRegistrarse">SALIR</a></li>
+            <li class="m1 l1 right"><a href="/Home/Salir" id="btnRegistrarse">SALIR</a></li>
             <li class="m1 l1 right"><a href="">ACERCA DE</a></li>
         </ul>
     </div>
