--- a/WebApp/Views/Home/PublicacionMasValorada.cshtml
+++ b/WebApp/Views/Home/PublicacionMasValorada.cshtml
@@ -6,6 +6,9 @@
 
 <div class="row">
     <div class="col m12">
+        <div>
+            @Html.Partial("pv_Buscador")
+        </div>
         <div class="row">
             <div class="titulo-inicio blue-text accent-3 center">
                 <h5>PUBLICACIONES MAS VALORADAS</h5>
