Acerca de terminado

--- a/WebApp/Content/site.css
+++ b/WebApp/Content/site.css
@@ -51,3 +51,12 @@ body {
 #div-referencias {
     margin-bottom: 80px;
 }
+
+.acerca-de{
+    padding: 5% 10% 5% 10%;
+    margin: 0px;
+}
+
+.top {
+    margin-top: 15%;
+}
