Link AcercaDe en Navbar Usuario
- Se agrego link AcercaDe en Navbar Usuario
- Se agrego filtro de Authorize en AcercaDe y Salir

--- a/WebApp/Views/Shared/pv_NavbarUsuario.cshtml
+++ b/WebApp/Views/Shared/pv_NavbarUsuario.cshtml
@@ -11,7 +11,7 @@
                 </div>
             </li>
             <li class="m1 l1 right"><a href="/Home/Salir" id="btnRegistrarse">SALIR</a></li>
-            <li class="m1 l1 right"><a href="">ACERCA DE</a></li>
+            <li class="m1 l1 right"><a href="/Home/AcercaDe">ACERCA DE</a></li>
         </ul>
     </div>
 </nav>
