Se agrego datos en el footer

--- a/WebApp/Views/Shared/pv_Footer.cshtml
+++ b/WebApp/Views/Shared/pv_Footer.cshtml
@@ -1,21 +1,10 @@
-﻿@{
-    string[] integrantes = new string[]
-    {
-    "Esther Alifraco",
-    "Natalia Cipollino",
-    "Maidana Pablo"
-    };
-
-    string nroGrupo = "7";
-
-}
-
+﻿
     <footer class="page-footer blue accent-1">
         <div class="container">
             <div class="row">
                 <div class="col col-lg-6 col-sm-12">
                     <h5 class="white-text">Integrantes</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    <p class="grey-text text-lighten-4">Programación Web 3 20201C - Grupo 7 - Paoloni Ezequiel y Maidana Pablo.</p>
                 </div>
             </div>
         </div>
