--- a/WebApp/Views/Necesidad/ModificarNecesidad.cshtml
+++ b/WebApp/Views/Necesidad/ModificarNecesidad.cshtml
@@ -10,7 +10,7 @@
 <div>
 
     <div class="row" id="crear-necesidad-container">
-        <form class="" action="./RealizarModificacion">
+        <form class="" action="./RealizarModificacion" enctype="multipart/form-data" method="post">
             <div class="col s12 l8 push-l2">
 
                 <h2>Modificar Necesidad</h2>
