--- a/WebApp/Views/Necesidad/_pvCamposCreacion.cshtml
+++ b/WebApp/Views/Necesidad/_pvCamposCreacion.cshtml
@@ -100,17 +100,15 @@
     }
 </div>
 
-<div class="input-field col s6 l4">
-    <label>Asdasda</label>
+<div class="">
+    <div class="necesidad-img">
+            <img src="~/Images/Perfil/user-icon.png" />
+    </div>
     <div class="file-field input-field">
-        <div class="btn btn-primary">
-            <span>Buscar</span>
-            <input id="Foto" name="Foto" accept="image/*" type="file" required />
-        </div>
-
-        <div class="file-path-wrapper">
-            <input class="file-path validate col s12" type="text" placeholder="Seleccione un archivo" />
-            @Html.ValidationMessageFor(o => o.Foto)
+        <div class="btn waves-effect waves-light col s3 blue darken-3">
+            <span>CARGAR FOTO</span>
+            <input type="file">
+            @Html.TextBoxFor(m => m.Foto, new { type = "file", name="Foto"})
         </div>
     </div>
 </div>
