Borro un placeholder para test

--- a/WebApp/Views/Home/pv_CardMasValorada.cshtml
+++ b/WebApp/Views/Home/pv_CardMasValorada.cshtml
@@ -7,7 +7,7 @@
         <div class="card-stacked">
             <div class="card-content">
                 <h5 class="col s12">@necesidad.Nombre</h5>
-                <p class="col s12">@necesidad.Usuarios.UserName asd</p>
+                <p class="col s12">@necesidad.Usuarios.UserName</p>
                 <p class="col s12">Valoración: @(necesidad.Valoracion*100)%</p>
                 <p class="col s12">Creada: @necesidad.FechaCreacion</p>
                 @* Saco el progressbar porque el tp no lo pide *@
