En SideNav se agrego el link OtrasNecesidades

--- a/WebApp/Views/Shared/pv_SideNavUsuario.cshtml
+++ b/WebApp/Views/Shared/pv_SideNavUsuario.cshtml
@@ -47,7 +47,7 @@
                 <div class="center-align">
                     <div class="col m12 l12">
                         <br />
-                        <a href="#" class="btn blue accent-3 white-text" id="boton">OTROS USUARIOS</a>
+                        <a href="/OtrasNecesidades/Inicio" class="btn blue accent-3 white-text" id="boton">OTROS USUARIOS</a>
                     </div>
                 </div>
                 <div class="center-align">
